--- a/src/app/restaurant-list/restaurant-list.component.html
+++ b/src/app/restaurant-list/restaurant-list.component.html
@@ -39,6 +39,7 @@
 
     <div *ngFor="let resto of filteredRestaurants"
          [routerLink]="['/shop', resto.id]"
+         (click)="testClick(resto.id)"
          class="bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow cursor-pointer">
 
       <div class="h-48 bg-gray-200 relative">
